[tool.poetry]
name = "transaction-analyzer"
version = "0.1.0"
description = "Bank transaction analysis tool"
authors = ["Your Name <your.email@example.com>"]

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    | __pycache__
    | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = 'venv/'
